Bug 157067 - "Character styles" panel is not showing highlighting color style
Summary: "Character styles" panel is not showing highlighting color style
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium minor
Assignee: Khaled Hosny
URL:
Whiteboard: target:24.2.0 target:7.6.3 target:7.5.8
Keywords: bibisected, bisected, regression
: 157818 (view as bug list)
Depends on:
Blocks: Sidebar-Styles Writer-Styles-Character
  Show dependency treegraph
 
Reported: 2023-09-02 16:24 UTC by rafael.linux.user
Modified: 2023-10-27 07:05 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Writer document with background styles for characters and 2 screenshots. Open and have a look. (218.03 KB, application/vnd.oasis.opendocument.text)
2023-09-03 15:24 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rafael.linux.user 2023-09-02 16:24:37 UTC
Description:
While "Paragraph" and "Character" styles panels are showing right text properties like typographic font, foreground color, however "Character" styles are not showing background color ("Paragraph" does it right).

Steps to Reproduce:
1.Create a new "Character" style that uses background color
2.Search for it in its own panel


Actual Results:
Background color is not showed

Expected Results:
To show background color like in "Paragraph" styles.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: es
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Comment 1 Robert Großkopf 2023-09-03 15:24:54 UTC
Created attachment 189320 [details]
Writer document with background styles for characters and 2 screenshots. Open and have a look.

Could confirm the buggy behavior. Seems the background of character styles hasn't be shown any more since LO 7.5.0.3 here. Last version without this buggy behavior is LO 7.4.7.2.

Tested with OpenSUSE 15.4 64bit rpm Linux and KDE.
Comment 2 LeroyG 2023-09-03 16:08:35 UTC
(In reply to rafael.linux.user from comment #0)
> "Character" styles are not showing background color

Highlighting color. Changed it in title.
Comment 3 LeroyG 2023-09-04 18:45:26 UTC
Same behavior with:

Version: 7.5.3.2 (x86) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: es-MX (es_MX); UI: fr-FR
Calc: threaded

Version: 7.6.0.2 (x86) / LibreOffice Community
Build ID: 41d6f628ba3f046f16b5fa9fa8db8d4c2ab3b582
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: es-MX (es_MX); UI: en-US
Calc: threaded


Not reproducible with:

Version: 7.4.7.2 (x86) / LibreOffice Community
Build ID: 723314e595e8007d3cf785c16538505a1c878ca5
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: es-MX (es_MX); UI: en-US
Calc: threaded
Comment 4 raal 2023-09-19 16:13:03 UTC
This seems to have begun at the below commit in bibisect repository/OS XXXX.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 24df207b5f0dab33f190890c8fa2311cc0623452 is the first bad commit
commit 24df207b5f0dab33f190890c8fa2311cc0623452
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Aug 22 18:14:12 2022 +0200

    source 0483fbd1d05d74c394d9274bdee77b3b2aebb495

138600: tdf#87535: Preview styles using CTL/CJK fonts in the sidebar | https://gerrit.libreoffice.org/c/core/+/138600
Comment 5 LeroyG 2023-09-19 19:35:46 UTC
Version:

Kira Tubo removed 7.5.0.3, and added 7.4.7.2. Hope that it was not based on comment #3.
Comment 6 Robert Großkopf 2023-09-20 06:08:38 UTC
Changed version back to first version with buggy behavior. But it has already be bisected. First appears with first LO 7.5-version, see https://bugs.documentfoundation.org/show_bug.cgi?id=157067#c4
Comment 7 Caolán McNamara 2023-09-21 11:52:45 UTC
FWIW I'm not actually the author of that patch.
Comment 8 Commit Notification 2023-09-24 16:24:48 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d9eed9b489d8ad208df307588595f3a8d3b7539b

tdf#157067: Fix missing background color in style preview

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-09-25 11:33:38 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b44af80f0aa1ce93193f0edb107f17edbabba17a

tdf#157067: Fix missing background color in style preview

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-09-25 11:34:41 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0cdb364d0f8b30f857da212e6c663f36b91087d1

tdf#157067: Fix missing background color in style preview

It will be available in 7.5.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Dieter 2023-10-27 07:05:26 UTC
*** Bug 157818 has been marked as a duplicate of this bug. ***