tdf#157067: Fix missing background color in style preview

Set the colors after setting the font not before as otherwise they seem
to get overridden.

Change-Id: I258cb762fd2328369bd8adae63e94ec87c666bb7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157208
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit d9eed9b489d8ad208df307588595f3a8d3b7539b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157212
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>